# MS-Splatting

./: .gitignore  README.md  pyproject.toml
mmsplat/: mmsplat_camera_export.py  mmsplat_camera_optimizer.py  mmsplat_config.py  mmsplat_datamanager.py  mmsplat_dataparser.py  mmsplat_dataparser_config.py  mmsplat_dataset.py  mmsplat_exporter.py  mmsplat_model.py  mmsplat_neural_surface.py  mmsplat_pipeline.py
mmsplat/gsplat/strategy/: __init__.py  default.py  mmMaxAverage.py  ops.py
mmsplat/process_data/: copy_images.py  mmcolmap.py  mmutils.py
mmsplat/rendering/: render.py
mmsplat/scripts/: eval.py  export.py  export_cameras.py  export_model_stats.py  export_train_eval_split.py  process_data.py
mmsplat/util/: band_indices.py  eval_utils.py  image_utils.py  loss.py  memory.py  parallel_for.py  utils.py
